Commit para crear la rama de header y terminar el header en su rama correspondiente

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Concept</title>
+    <link href="//db.onlinewebfonts.com/c/00d5a78493aed4b11e2584ad7cceee49?family=Gilroy+ExtraBold" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -11,10 +12,9 @@
         <img class="header-img" src="./image/sound.png" alt="Logo">
         
         <form class="example" action="action_page.php">
-            <input type="text" placeholder="Search.." name="search">
+            <input type="text" placeholder="Find the best song" name="search">
           </form>
 
-          
 
     </header>
 </body>
