--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Concept</title>
-    <link href="//db.onlinewebfonts.com/c/00d5a78493aed4b11e2584ad7cceee49?family=Gilroy+ExtraBold" rel="stylesheet" type="text/css"/>
+    <link href="//db.onlinewebfonts.com/c/00d5a78493aed4b11e2584ad7cceee49?family=Gilroy+ExtraBold" rel="stylesheet"
+        type="text/css" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header>
         <img class="header-img" src="./image/sound.png" alt="Logo">
-        
+
         <form class="example" action="action_page.php">
             <input type="text" placeholder="Find the best song" name="search">
-          </form>
+        </form>
 
+        <nav class="header-nav">
+            <ul class="header-nav__ul">
+                <li class="header-nav__li"><a class="header-nav__a" href="#">Home</a></li>
+                <li class="header-nav__li"><a class="header-nav__a" href="#">About</a></li>
+                <li class="header-nav__li"><a class="header-nav__a" href="#">Blog</a></li>
+            </ul>
+        </nav>
+
+        <a href="#" class="header-button__subscribe">Subscribe</a>
 
     </header>
 </body>
+
 </html>
